--- a/oops.html
+++ b/oops.html
@@ -4,12 +4,10 @@
 		<title>What!</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="../main.css">
+		<link type="text/css" rel="stylesheet" href="./main.css">
 	</head>
 	<body>
-		<script src="https://cdn.jsdelivr.net/npm/voronoi@1.0.0/rhill-voronoi-core.min.js"></script>
 
-		<script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js" crossorigin="anonymous"></script>
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">What!!!
 		</div>
