webcam test first files

--- a/oops.html
+++ b/oops.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="./main.css">
+	
 	</head>
 	<body>
 
@@ -17,10 +18,10 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../../build/three.module.js",
-					"three/addons/": "../jsm/"
+				  "three": "https://unpkg.com/three@0.160.1/build/three.module.js",
+				  "three/addons/": "https://unpkg.com/three@0.160.1/examples/jsm/"
 				}
-			}
+			  }
 		</script>
 
 		<script type="module">
